[project]
name = "nitrogeneration"
version = "1.0.0"
description = "A template to create our own terminal like app."
authors = [{name = "Zidan Harb", email = "zidan.harb2012@gmail.com"}]
requires-python = ">=3.7"
dependencies = [
    "os",
    "colorama',
    "platform",
    "psutil"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"